Updated Jenkins